button alignment and styleshout section fixed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -87,4 +87,7 @@
         margin-bottom: 20px !important;
         padding-bottom: 20px !important;
     }
+    .styleshout{
+        padding: 50px 25px !important;
+    }
 }
